fixed login weird overflow issue

--- a/frontend/src/Components/Login/styles.scss
+++ b/frontend/src/Components/Login/styles.scss
@@ -1,4 +1,5 @@
 .login-page {
+  overflow-y: hidden;
   .login-content {
     padding: 7%;
     display: flex;
@@ -11,9 +12,9 @@
       object-fit: cover;
     }
     form {
-      max-height: 60vh;
+      max-height: 55vh;
       width: 35vw;
-      margin: auto 0;
+      margin: 2vh 0;
       input {
         margin-top: 3vh;
         font-size: 20px;
